--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Tracktor</string>
     <string name="timeLabel">Время:</string>
     <string name="distanceLabel">Расстояние:</string>
+    <string name="speedLabel">Скорость:</string>
     <string name="start">Старт</string>
     <string name="end">Конец</string>
     <string name="stop">Стоп</string>
@@ -18,16 +19,24 @@
     <string name="title_distance_unit">Единица измерения</string>
     <string name="dialog_title_distance_unit">Выберите единицу измерения</string>
     <string name="title_auto_shutdown">Автоотключение</string>
+    <string name="title_auto_sex">Пол</string>
     <string name="dialog_title_auto_shutdown">Выберите время автоотключения</string>
     <string name="title_user_weight">Вес пользователя</string>
     <string name="dialog_title_user_weight">Вес пользователя</string>
+    <string name="dialog_title_user_height">Рост пользователя</string>
+    <string name="dialog_title_user_years">Возраст пользователя</string>
 
     <string name="pref_key_unit">unit</string>
     <string name="pref_key_shutdown">shutdown</string>
+    <string name="pref_key_sex">sex</string>
     <string name="pref_key_weight">weight</string>
+    <string name="pref_key_height">height</string>
+    <string name="pref_key_years">years</string>
     <string name="pref_default_value_unit">1</string>
     <string name="pref_default_value_shutdown">-1</string>
     <string name="pref_default_value_weight">60</string>
+    <string name="pref_default_value_height">170</string>
+    <string name="pref_default_value_years">30</string>
     <string name="btn_delete_result">Удалить</string>
 
     <string name="permissions_request_title">Внимание!</string>
