--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="distanceLabel">Расстояние:</string>
     <string name="speedLabel">Скорость:</string>
     <string name="energyLabel">Затраченная энергия:</string>
+    <string name="dateLabel">Дата:</string>
     <string name="activityTypeLabel">Вид деятельности:</string>
     <string name="start">Старт</string>
     <string name="end">Конец</string>
