--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="back_off">Приложение не может работать без доступа к местоположению</string>
     <string name="notify_info">Время: %s\nРасстояние: %s "</string>
     <string name="input_comment">Введите комментарий</string>
+    <string name="empty_list">Список пуст</string>
 </resources>
