--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,9 @@
     <string name="menu_item_about">О приложении</string>
     <string name="title_activity_preference">Настройки</string>
     <string name="title_distance_unit">Единица измерения</string>
+    <string name="title_distance_compress">Сжатие</string>
     <string name="dialog_title_distance_unit">Выберите единицу измерения</string>
+    <string name="dialog_title_compress">Сжатие</string>
     <string name="title_auto_shutdown">Автоотключение</string>
     <string name="title_auto_sex">Пол</string>
     <string name="dialog_title_auto_shutdown">Выберите время автоотключения</string>
@@ -30,6 +32,7 @@
     <string name="dialog_title_user_years">Возраст пользователя</string>
 
     <string name="pref_key_unit">unit</string>
+    <string name="pref_key_compress">compress</string>
     <string name="pref_key_shutdown">shutdown</string>
     <string name="pref_key_sex">sex</string>
     <string name="pref_key_weight">weight</string>
