--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,26 +21,32 @@
     <string name="title_activity_preference">Настройки</string>
     <string name="title_distance_unit">Единица измерения</string>
     <string name="title_distance_compress">Сжатие</string>
+    <string name="title_distance_track_color">Цвет линий</string>
     <string name="dialog_title_distance_unit">Выберите единицу измерения</string>
     <string name="dialog_title_compress">Сжатие</string>
+    <string name="dialog_title_track_color">Цвет трэка</string>
     <string name="title_auto_shutdown">Автоотключение</string>
     <string name="title_auto_sex">Пол</string>
     <string name="dialog_title_auto_shutdown">Выберите время автоотключения</string>
     <string name="title_user_weight">Вес пользователя</string>
     <string name="dialog_title_user_weight">Вес пользователя</string>
+    <string name="dialog_title_track_width">Толщина линий</string>
     <string name="dialog_title_user_height">Рост пользователя</string>
     <string name="dialog_title_user_years">Возраст пользователя</string>
 
     <string name="pref_key_unit">unit</string>
     <string name="pref_key_compress">compress</string>
+    <string name="pref_key_track_color">trackColor</string>
     <string name="pref_key_shutdown">shutdown</string>
     <string name="pref_key_sex">sex</string>
     <string name="pref_key_weight">weight</string>
     <string name="pref_key_height">height</string>
+    <string name="pref_key_track_width">trackWidth</string>
     <string name="pref_key_years">years</string>
     <string name="pref_default_value_unit">1</string>
     <string name="pref_default_value_shutdown">-1</string>
     <string name="pref_default_value_weight">60</string>
+    <string name="pref_default_value_track_width">10</string>
     <string name="pref_default_value_height">170</string>
     <string name="pref_default_value_years">30</string>
     <string name="btn_delete_result">Удалить</string>
